// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text renders correctly 1`] = `
<Text>
  1st test
</Text>
`;

exports[`Text renders with overrided styles 1`] = `
<Text>
  3rd test
</Text>
`;

exports[`Text renders with variant 1`] = `
<Text>
  1nd test
</Text>
`;
